SERVER-77007: MongoDB fails to compile with Clang 15 with C++20